[*] Fix width on small screen

--- a/source/css/common.less
+++ b/source/css/common.less
@@ -108,6 +108,7 @@ body {
   @media screen and (min-width: @xl-width) {
     max-width: 880px;
   }
+  width: 100%;
 }
 
 .recent-posts {
