--- a/source/css/mixin.less
+++ b/source/css/mixin.less
@@ -22,6 +22,7 @@
 .post-page {
   background-color: #fff;
   max-width: @post-width;
+  width: 100%;
   padding: 10px;
   position: relative;
   @media screen and (min-width: @sm-width) {
